--- a/about.html
+++ b/about.html
@@ -35,8 +35,8 @@
     <h4>Milan N. Loncarevic</h4>
 </div>
 
+<footer>Copyright 2021</footer>
 
 <script src="js/app.js"></script>
-
 </body>
 </html>
